--- a/traveling.html
+++ b/traveling.html
@@ -17,62 +17,78 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+				<header id="header">
+					<div class="inner">
 
-							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Tyler M. Hummer</span>
-								</a>
+						<!-- Logo -->
+							<a href="index.html" class="logo">
+								<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Tyler M. Hummer</span>
+							</a>
 
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
+						<!-- Nav -->
+							<nav>
+								<ul>
+									<li><a href="#menu">Menu</a></li>
+								</ul>
+							</nav>
 
-						</div>
-					</header>
+					</div>
+				</header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="academics.html">Academics</a></li>
-							<li><a href="writing.html">Writing</a></li>
-							<li><a href="traveling.html">Travel</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-					</nav>
+			<!-- Menu -->
+				<nav id="menu">
+					<h2>Menu</h2>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="academics.html">Academics</a></li>
+						<li><a href="writing.html">Writing</a></li>
+						<li><a href="traveling.html">Travel</a></li>
+						<li><a href="elements.html">Elements</a></li>
+					</ul>
+				</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hi! My name is Tyler and I'm an engineer interested in robots,<br />
-								design, and entrepreneurship.</h1>
-								<p>A bit about Tyler Hummer.</p>
+								<h1>Travel</h1>
+								<p>A bit about where I've been, who I went with, and what I've learned along the way.</p>
 							</header>
+							<hr />
+							<h2>The U.S.</h2>
 							<section class="tiles">
-								<article class="style1">
+								<article class="style10">
 									<span class="image">
-										<img src="images/nu_arch.png" alt="" />
+										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="academics.html">
-										<h2>Academics</h2>
+									<a href="generic.html">
+										<h2>The Adirondacks</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style5">
+								<article class="style12">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="writing.html">
-										<h2>Writing</h2>
+									<a href="generic.html">
+										<h2>Acadia National Park</h2>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										</div>
+									</a>
+								</article>
+							</section>
+							<hr />
+							<h2>Abroad</h2>
+							<section class="tiles">
+								<article class="style11">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Thailand</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -80,10 +96,21 @@
 								</article>
 								<article class="style9">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="traveling.html">
-										<h2>Travel</h2>
+									<a href="generic.html">
+										<h2>The Netherlands</h2>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style10">
+									<span class="image">
+										<img src="images/pic02.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Spain</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
