1st push with new format
- create new format for the website
- begin filling out content
- uploaded files for reference

--- a/academics.html
+++ b/academics.html
@@ -43,7 +43,7 @@
 						<li><a href="academics.html">Academics</a></li>
 						<li><a href="writing.html">Writing</a></li>
 						<li><a href="traveling.html">Travel</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<!-- <li><a href="elements.html">Elements</a></li> -->
 					</ul>
 				</nav>
 
@@ -52,30 +52,45 @@
 						<div class="inner">
 							<header>
 								<h1>Academics</h1>
-								<p>Research projects I have worked on and courses I have taken</p>
+								<p>Research projects I have worked on and courses I have taken.</p>
+								<blockquote>
+									A man's mind, stretched by new ideas, may never return to its original dimensions.
+									<br> <b>- Oliver Wendell Holmes Jr. -</b> 
+								</blockquote>
 							</header>
 							<hr />
 							<h2>Research</h2>
 							<section class="tiles">
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/pic08.jpg" alt="" />
 									</span>
-									<a href="generic_template.html">
-										<h2>Magna</h2>
+									<a href="academics_research_RD.html">
+										<h2>Modular Robots</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Robots, except modular... and made of cool shapes.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/pic08.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
+									<a href="academics_research_VELO.html">
+										<h2>Velo</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Inspired by bugs. Designed to think. Built to educate.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic09.jpg" alt="" />
+									</span>
+									<a href="academics_research_soft_robots.html">
+										<h2>Soft Robots</h2>
+										<div class="content">
+											<p>Coming Soon.</p>
 										</div>
 									</a>
 								</article>
@@ -83,25 +98,69 @@
 							<hr />
 							<h2>Coursework</h2>
 							<section class="tiles">
-								<article class="style1">
+								<article class="style3">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Magna</h2>
+									<a href="academics_course_eng_entr.html">
+										<h2>Engineering Entrepreneruship</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Taking cutting-ege technology and creating companies.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic09.jpg" alt="" />
+									</span>
+									<a href="academics_course_alife.html">
+										<h2>Artifical Life</h2>
+										<div class="content">
+											<p>Letting computers (try to) design simulated organisms.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image">
+										<img src="images/pic08.jpg" alt="" />
+									</span>
+									<a href="academics_course_DTTTR.html">
+										<h2>Designing Technological Tools for Thinking and Learning</h2>
+										<div class="content">
+											<p>Using techonology to enhance learning.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic07.jpg" alt="" />
+									</span>
+									<a href="academics_course_entrep_emerg.html">
+										<h2>Entrepreneruship and Market Creation in Emerging Markets</h2>
+										<div class="content">
+											<p>Creating business opportunities in untapped markets.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style4">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
+									<a href="academics_course_design_res.html">
+										<h2>Design Research: Learning to See People and Their Patterns</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Human-centered research for social change.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic09.jpg" alt="" />
+									</span>
+									<a href="academics_course_product.html">
+										<h2>Product Management</h2>
+										<div class="content">
+											<p>Going from problem to product in ten weeks.</p>
 										</div>
 									</a>
 								</article>
@@ -110,45 +169,23 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<!-- Footer -->
+				<footer id="footer">
+					<div class="inner">
+						<section>
+							<h2>Get in touch</h2>
+							<ul class="icons">
+								<li><a href="mailto:hummer@u.northwestern.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/tyler-hummer-9326ab173/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.instagram.com/tyler_hummer11/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+
 							</ul>
-						</div>
-					</footer>
+						</section>
+						<ul class="copyright">
+							<li>&copy; Tyler M. Hummer. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+				</footer>
 
 			</div>
 
