--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<li><a href="academics.html">Academics</a></li>
 							<li><a href="writing.html">Writing</a></li>
 							<li><a href="traveling.html">Travel</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<!-- <li><a href="elements.html">Elements</a></li> -->
 						</ul>
 					</nav>
 
@@ -51,19 +51,20 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hi! My name is Tyler and I'm an engineer interested in robots,<br />
-								design, and entrepreneurship.</h1>
-								<p>A bit about Tyler Hummer.</p>
+								<h1>My name is Tyler and I'm an engineer interested in entrepreneurship,
+								design, and robots.</h1>
+								<p>Check out the different pages to learn bit about me,
+								but <a href="attachments/Tyler_CV_1.21.2024.pdf"><b>here's my CV</b></a> in case you want the quick version. </p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/nu_arch.png" alt="" />
+										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="academics.html">
 										<h2>Academics</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Research papers, course projects, and everything in between.</p>
 										</div>
 									</a>
 								</article>
@@ -74,7 +75,7 @@
 									<a href="writing.html">
 										<h2>Writing</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Creative writing and reflections on work, life, and relationships.</p>
 										</div>
 									</a>
 								</article>
@@ -85,7 +86,7 @@
 									<a href="traveling.html">
 										<h2>Travel</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Places I've been. People I've met along the way.</p>
 										</div>
 									</a>
 								</article>
@@ -98,38 +99,15 @@
 						<div class="inner">
 							<section>
 								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="mailto:hummer@u.northwestern.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://www.linkedin.com/in/tyler-hummer-9326ab173/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.instagram.com/tyler_hummer11/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Tyler M. Hummer. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
