--- a/writing.html
+++ b/writing.html
@@ -43,7 +43,7 @@
 						<li><a href="academics.html">Academics</a></li>
 						<li><a href="writing.html">Writing</a></li>
 						<li><a href="traveling.html">Travel</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<!-- <li><a href="elements.html">Elements</a></li> -->
 					</ul>
 				</nav>
 
@@ -53,6 +53,11 @@
 							<header>
 								<h1>Writing</h1>
 								<p>Creative writing and reflections on work, life, and relationships.</p>
+								<blockquote>
+								It may be that when we no longer know what to do we have come to our real work and that when we no longer know which way to go we have begun
+								our real journey. The mind that is not baffled is not employed. The impeded stream is the one that sings. <br>
+								<b> - Wendell Berry, <i>Standing by Words (1983)</i> - </b>
+								</blockquote>
 							</header>
 							<hr />
 							<h2>Reflections of ...</h2>
@@ -61,10 +66,10 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="reflections_of_grad_student.html">
+									<a href="writing_reflect_grad.html">
 										<h2>a graduate student</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+
 										</div>
 									</a>
 								</article>
@@ -72,25 +77,34 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="reflections_of_roboticist.html">
+									<a href="writing_reflect_roboticist.html">
 										<h2>a roboticist</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										
 										</div>
 									</a>
 								</article>
 							</section>
 							<hr />
 							<h2>Lives of Inanimate Objects</h2>
+							<p>
+							In a world dominated by materialism, I often find myself viewing the natural world and the man-made objects around me through an exploitative lens. 
+							However unconsicious these thoughts may be, they can have immense influence on the way in which I live my life. The implications of this mindset show up in my behavior - 
+							wastefulness, consumerism, and general disregard for the natural world. In times of reflection I begin to question my own behavioral patterns, a pattern that is more common
+							in modern society than any one person would care to admit. This led me to ask the following questions. What if the inanimate objects that humans create had the ability to 
+							perceive the world around them, to feel emotions as humans do, and to dream about their future? How can this shift in perspective to the inanimate, which in reality have no control
+							over their own existence, help me understand the implications of my own actions, of which I have complete control over? These short stories are an exploration into these questions in 
+							reflective, sometimes somber, but generally hopeful ways. I hope you enjoy them.
+							</p>
 							<section class="tiles">
 								<article class="style6">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="life_of_hose_nozzle.html">
+									<a href="writing_life_hose_nozzle.html">
 										<h2>hose nozzle</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+
 										</div>
 									</a>
 								</article>
@@ -98,10 +112,10 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="life_of_planes_trains_automobiles.html">
+									<a href="writing_life_plane_train_.html">
 										<h2>planes, trains, and automobiles</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										
 										</div>
 									</a>
 								</article>
@@ -110,45 +124,22 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<footer id="footer">
+					<div class="inner">
+						<section>
+							<h2>Get in touch</h2>
+							<ul class="icons">
+								<li><a href="mailto:hummer@u.northwestern.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/tyler-hummer-9326ab173/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.instagram.com/tyler_hummer11/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+
 							</ul>
-						</div>
-					</footer>
+						</section>
+						<ul class="copyright">
+							<li>&copy; Tyler M. Hummer. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+				</footer>
 
 			</div>
 
