add content to courses and links to travel photos

--- a/academics.html
+++ b/academics.html
@@ -98,12 +98,23 @@
 							<hr />
 							<h2>Coursework</h2>
 							<section class="tiles">
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic09.jpg" alt="" />
+									</span>
+									<a href="academics_course_product.html">
+										<h2>Product Management</h2>
+										<div class="content">
+											<p>Going from problem to product in ten weeks.</p>
+										</div>
+									</a>
+								</article>
 								<article class="style3">
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="academics_course_eng_entr.html">
-										<h2>Engineering Entrepreneruship</h2>
+										<h2>Engineering Entrepreneurship</h2>
 										<div class="content">
 											<p>Taking cutting-ege technology and creating companies.</p>
 										</div>
@@ -136,7 +147,7 @@
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="academics_course_entrep_emerg.html">
-										<h2>Entrepreneruship and Market Creation in Emerging Markets</h2>
+										<h2>Entrepreneurship and Market Creation in Emerging Markets</h2>
 										<div class="content">
 											<p>Creating business opportunities in untapped markets.</p>
 										</div>
@@ -150,17 +161,6 @@
 										<h2>Design Research: Learning to See People and Their Patterns</h2>
 										<div class="content">
 											<p>Human-centered research for social change.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="academics_course_product.html">
-										<h2>Product Management</h2>
-										<div class="content">
-											<p>Going from problem to product in ten weeks.</p>
 										</div>
 									</a>
 								</article>
