--- a/academics_course_DTTTR.html
+++ b/academics_course_DTTTR.html
@@ -52,6 +52,28 @@
 						<div class="inner">
 							<h1>Designing Technological Tools for Thinking and Learning</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<p>
+								How do kids (or adults for that matter) actually learn?
+								How is learning changing in a world that is growing ever more technological?
+								How can we as educators embrace technology, and even use it to improve pedagogy and learning outcomes?
+							</p>
+							<p>
+								All of these questions, and more, were explored in this course taught by <a href="https://sites.northwestern.edu/uriwilensky/">Professor Uri Wilensky</a>, inventor of NetLogo.
+								The course’s foundation lay in the idea of Constructionist Learning, a concept first introduced by <a href="https://en.wikipedia.org/wiki/Seymour_Papert">Seymour Papert</a>, which says that students learn most effectively through discovery and interaction with the world around them.
+								Constructionist theories laid the foundation for many of the experiential learning practices that have been embraced in many educational environments today.
+							</p>
+							<p>
+								As a part of this project focused course, we designed and built our own interactive platforms and curriculums, rooted in Constructionism’s principles, for integrating technology into learning.
+								My project, along with my partner <a href="https://mongkhonvanit.com/home/">Kritphong Mongkhonvanit</a>, was designing and building a hybrid simulation and physical robotics system to help teach fundamental neuroscience and biology to young learners.
+								The idea stemmed from the first few chapters of Valentino Braitenberg’s book Vehicles, which discussed how even simple neural connections can lead to insect-like behaviors.
+							</p>
+							<p>
+								The final curriculum designed for the course’s final project can be found here, along with the poster presentation.
+							</p>
+							<p>
+								We also submitted the project as a demo paper to the Interaction Design and Children (IDC ‘24) Conference.
+								Check out the IDC Paper here!
+							</p>
 						</div>
 					</div>
 
