--- a/academics_course_alife.html
+++ b/academics_course_alife.html
@@ -50,11 +50,11 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Artifical Life</h1>
+							<h1>Artificial Life</h1>
 							<span class="image body"><img src="images\evolved_bods_and_brains.gif" alt="" /></span>
 							<p>
 								<b>What would happen if we took inspiration from Darwin's theory of Survival of the Fittest and applied it to robot design?</b>
-								<br>This is exactly what I was exploring in the Artifical Life (ALife) course.
+								<br>This is exactly what I was exploring in the Artificial Life (ALife) course.
 							</p>
 							<p>
 								The field of artificial life was revolutionized by Karl Sims and the creation of his <a href="https://www.youtube.com/watch?v=RZtZia4ZkX8"><b>evolved virtual creatures</b></a>.
