--- a/academics_course_design_res.html
+++ b/academics_course_design_res.html
@@ -52,6 +52,30 @@
 						<div class="inner">
 							<h1>Design Research: Learning to See People and Their Patterns</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<p>
+								I was first introduced to the concept of human centered design (HCD) during my time at Union College for my undergraduate degree, and I quickly embraced it.
+								This ultimately led to the founding of Entrepreneurs of the Nott (EON for short), Union’s first club focused on entrepreneurship and HCD. 
+							</p>
+							<p>
+								Fast forward to today and I am still just as interested in HCD (hence why I took this class to begin with!).
+								However, one qualm that I have with design education, which understandably focuses on project based courses and intends to teach all aspects of the design process, is that the project can feel rushed.
+								Oftentimes, and especially at universities on the quarter system like Northwestern, within the first week of the class you have to form teams, identify a problem or pain point, and have all of your research done prior to the second class.
+								A WEEK!
+								If there is anything that I have learned about design, it’s that rushing any part of the process typically leads to poor designs.
+							</p>
+							<p>
+								That is precisely why I found this class to be such a valuable learning experience.
+								Rather than try to rush through the entire design process, we were able to spend 10 focused weeks on the early phases of HCD, namely Framing, Research, and Synthesis, on a project of our choosing. 
+							</p>
+							<p>
+								Being a graduate student, I am keenly aware of the mental health issues that can affect graduate students at various times throughout their studies.
+								I conducted research interviews with my peers from different backgrounds, academic disciplines, and at all stages of their academic careers to better understand how people experience mental health - the root causes, how to address them, and how the university may or may not support them along the way.
+							</p>
+							<p>
+								<a href="attachments\DSGN_research_final_presentation.pdf"><b>My final presentation can be found here</b></a>.
+								The presentation outlines my overarching research question, the research approach, and the concepts that arose as a result of my insights.
+								Just to reiterate, the main focus of this course was the research and deeply understanding the problem, with concept designs as a final step, and no implementation.
+							</p>
 						</div>
 					</div>
 
