--- a/academics_course_eng_entr.html
+++ b/academics_course_eng_entr.html
@@ -50,14 +50,14 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Engineering Entrepreneruship</h1>
+							<h1>Engineering Entrepreneurship</h1>
 							<span class="image body"><img src="images\mocobot-six.jpg" alt="" />image source: <a href="https://www.mccormick.northwestern.edu/magazine/fall-2022/future-of-human-robot-interaction/">Northwestern University</a></span>
 							<p>	
 								<br><b>As an entrepreneur</b> who also happens to be a PhD student studying robotics, I am always thinking about how my research could eventually become a company in the future. 
-								Unlike other entrepreneural approaches, where a "pain point" is identifed and a value proposition is built around that, this course was focused on using innovative technologies as a foundation to build new business ventures.
+								Unlike other entrepreneurial approaches, where a "pain point" is identified and a value proposition is built around that, this course was focused on using innovative technologies as a foundation to build new business ventures.
 							</p>
 							<p>
-								This course was a formal introduction to Innovation Driven Entrepreneruship using Bill Aulet's Disciplined Entrepreneruship framework.
+								This course was a formal introduction to Innovation Driven Entrepreneurship using Bill Aulet's Disciplined Entrepreneurship framework.
 								The course was entirely project-driven, the topics of which were actual technologies being researched and developed at Northwestern University. 
 							</p>
 							<p>	
