--- a/academics_course_entrep_emerg.html
+++ b/academics_course_entrep_emerg.html
@@ -52,6 +52,28 @@
 						<div class="inner">
 							<h1>Entrepreneruship and Market Creation in Emerging Markets</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+
+							<p>
+								Only 7% of people in the world live on more than $50 a day.
+								This course was really about learning the necessary entrepreneurial skills that can enable people to create new markets that serve the remaining 93%, most of whom live in emerging economies.
+							</p>
+
+							<p>
+								Taught by <a href="http://efosaojomo.com/"><b>Efosa Ojomo</b></a>, a researcher at the Clayton Christensen Institute and author of <a href="https://www.amazon.com/Prosperity-Paradox-Innovation-Nations-Poverty/dp/0062851829"><b>The Prosperity Paradox</b></a> (which I highly recommend), this course was truly eye opening about the realities of entrepreneurship for most of the world.
+								From government corruption, to nonexistent supply chains, to a complete lack of infrastructure, building a business in emerging markets has an innumerable number of challenges that are often overlooked in developed countries.
+								Yet, business is a key to prosperity, and as we learned through case studies, guest speakers, and our own research papers, an effective way to address these issues in emerging economies.
+							</p>
+
+							<p>
+								My research paper was focused on clean water - a necessity for all humans to live a healthy life - and how nonprofit organizations use money from grants and donors to give people access to clean water.
+								Although these organizations operate with the best of intentions, inevitably wells break down, donations slow down, and then wells sit, again leaving people without access to clean water.
+								In a truly market creation mindset, by making self-sustaining clean water businesses, incentivized by their own bottom line to maintain wells and allocate resources effectively, we can ensure people have access to clean water without the need for reliance on donations.
+							</p>
+
+							<p>
+								If you are interested, <a href="attachments\Entrep_Emerg_Final_Paper.pdf"><b>you can find my final research paper here.</b></a>
+							</p>
+
 						</div>
 					</div>
 
