--- a/academics_course_product.html
+++ b/academics_course_product.html
@@ -52,6 +52,29 @@
 						<div class="inner">
 							<h1>Product Management</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+
+							<p>
+								Truthfully, coming from an engineering and academic background, I didn’t know the difference between a <i>product</i> and a <i>project</i> manager before taking this class.
+								All I knew was that both roles were critical in building things that people need, whether they know it or not… and I love building things.
+							</p>
+							<p>
+								The nice thing about this course is that it was a project driven class, allowing us to “get our hands dirty” and apply what we were learning to a real project.
+								In just 10 weeks we formed teams, conceived an idea centered around a pain point, conducted research with different stakeholders and on the market as a whole, developed a product prototype, and presented our work to our professors and the class.
+							</p>
+							<p>
+								The pain point we tried to address was something I personally experienced as I moved to Chicago to begin graduate school - it is difficult to find people to play pickup sports with, especially when you are new to a city, don’t know anyone, and really just find it difficult to put yourself out there and walk up to people and say, “can I play?”.
+								For as long as I can remember, I have used pickup sports as a way to stay fit, meet people outside of work or school, and ultimately to build a sense of community wherever I may be living.
+								With MatchUp, our pickup sports app, people can meet new people, stay fit, and find a sense of community in a new city even in the midst of a hectic lifestyle.
+							</p>
+							<p>
+								We summarized our stakeholder and market research in a Market Requirements Document <a href="attachments\MatchUp_MRD.pdf"><b>(click here to see our MRD)</b></a>, which informed the design of our Product Requirements Document <a href="attachments\MatchUp_PRD.pdf"><b>(click here to see our PRD)</b></a>.
+								We then communicated all of our work in our Product Proposal Presentation <a href="attachments\MatchUp_Presentation.pdf"><b>(click here to see our Slide Deck)</b></a>.
+							</p>
+							<p>
+								I hope you enjoy them!
+								Please reach out if you are in Chicago and want to play any soccer, basketball, frisbee, tennis, or any other pickup sport you can think of!
+							</p>
+
 						</div>
 					</div>
 
