--- a/traveling.html
+++ b/traveling.html
@@ -52,7 +52,7 @@
 						<div class="inner">
 							<header>
 								<h1>Travel</h1>
-								<p>A bit about where I've been, who I went with, and what I've learned along the way.</p>
+								<p>Some photos of where I've been, who I went with, and people I've met along the way.</p>
 							</header>
 							<hr />
 							<h2>The U.S.</h2>
@@ -61,7 +61,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="coming_soon.html">
+									<a href="https://drive.google.com/drive/folders/1YSasnPLZjJu0NllAYQTk52yLVuYKx8C6?usp=sharing">
 										<h2>The Adirondacks</h2>
 										<div class="content">
 										</div>
@@ -71,7 +71,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="coming_soon.html">
+									<a href="https://drive.google.com/drive/folders/1M2gLDudu74FDHFgcXGAopG4rwICwPzR3?usp=sharing">
 										<h2>Acadia National Park</h2>
 										<div class="content">
 										</div>
@@ -85,8 +85,8 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="coming_soon.html">
-										<h2>Thailand</h2>
+									<a href="https://drive.google.com/drive/folders/11Q-cFeSCyOYYzjsDhiNL-9mPBEyG16tS?usp=sharing">
+										<h2>Thailand 1.0</h2>
 										<div class="content">
 										</div>
 									</a>
@@ -95,7 +95,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="coming_soon.html">
+									<a href="https://drive.google.com/drive/folders/1bBqC-Awz-st4IXwAcE8OsYFHwGHNWuFJ?usp=sharing">
 										<h2>The Netherlands</h2>
 										<div class="content">
 										</div>
@@ -105,8 +105,18 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="coming_soon.html">
+									<a href="https://drive.google.com/drive/folders/1d21aN0Xcnd5UtBQuwebxdJGm9yAGV6HV?usp=sharing">
 										<h2>Spain</h2>
+										<div class="content">
+										</div>
+									</a>
+								</article>
+								<article class="style9">
+									<span class="image">
+										<img src="images/pic02.jpg" alt="" />
+									</span>
+									<a href="https://drive.google.com/drive/folders/1-e9bpKAyehHRfd0Y_pR8AdyLrefKE-ch?usp=sharing">
+										<h2>Thailand 2.0</h2>
 										<div class="content">
 										</div>
 									</a>
