added research page content

--- a/academics_course_DTTTR.html
+++ b/academics_course_DTTTR.html
@@ -72,7 +72,7 @@
 							</p>
 							<p>
 								We also submitted the project as a demo paper to the Interaction Design and Children (IDC ‘24) Conference.
-								Check out the IDC Paper here!
+								<a href="https://dl.acm.org/doi/pdf/10.1145/3585088.3594489?casa_token=d6eeRLEKaPQAAAAA:tm2-D9hjcPI2WUiCdxTNzsa_IAz2qsfD6KvB39LFTYeOFqE-IVQiDzco1Vy1i5ULWHd4PEAuyLtq"><b>Check out the IDC Paper here!</b></a>
 							</p>
 						</div>
 					</div>
