--- a/academics_research_RD.html
+++ b/academics_research_RD.html
@@ -52,6 +52,25 @@
 						<div class="inner">
 							<h1>Modular Robots</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<p>
+								Coming into graduate school, I wasn’t exactly sure what topic I would be focusing on for my research, though I knew I wanted to be in a place that I could be creative, on the cutting edge of technology, and be challenged to learn new things each and every day.
+							</p>
+							<p>
+								Then I found robotics.
+							</p>
+							<p>
+								With an undergraduate degree in mechanical engineering, I had little to no experience working with robots.
+								I didn’t (and still don’t) see that as a negative though. 
+								Every single day I am able to learn something new, whether it’s through reading research papers, talking to any of my ridiculously bright peers at Northwestern’s Center for Robotics and Biosystems, or through a seemingly infinite number of design iterations (a.k.a. failures!).
+							</p>
+							<p>
+								Over the past year and a half, I have gone from having virtually no experience in robotics, to conceiving my own research direction in the field of modular robotics, to writing and publishing my first academic paper.
+								I will be presenting my paper, <i>A non-cubic space-filling modular robot</i>, at this year’s International Conference on Robotics and Automation (ICRA) in Yokohama, Japan!
+							</p>
+							<p>
+								I am super excited to share <a href="https://arxiv.org/pdf/2403.01323"><b>my paper on a new form of modular robot!</b></a>
+								Thanks so much for reading!
+							</p>
 						</div>
 					</div>
 
