--- a/academics_research_VELO.html
+++ b/academics_research_VELO.html
@@ -52,6 +52,22 @@
 						<div class="inner">
 							<h1>Velo</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<p>
+								Throughout my time in undergrad, and even before during high school, I have always felt a draw towards being a teacher in some way, shape or form.
+								Over the years, I have found so many different ways to do this.
+								I have coached basketball and soccer teams, tutored kids 1 on 1 in math and science, and even taught English to high school students for a year in Thailand after finishing my undergraduate degree.
+							</p>
+							<p>
+								Fast-forward to today and I still have a heart for teaching in any capacity possible.
+								One way that I have tried to continue to do this is through the creation of low-cost technological tools that can be used in educational settings to teach concepts of all kinds.
+							</p>
+							<p>
+								During the <a href="academics_course_DTTTR.html">Design of Technological Tools for Thinking and Learning course</a>, I worked to create a robotics toolkit called VELO.
+								When paired with a custom simulation platform, it can help teach young students about robotics, neuroscience, and biology.
+							</p>
+							<p>
+								You can find <a href="https://dl.acm.org/doi/pdf/10.1145/3585088.3594489?casa_token=d6eeRLEKaPQAAAAA:tm2-D9hjcPI2WUiCdxTNzsa_IAz2qsfD6KvB39LFTYeOFqE-IVQiDzco1Vy1i5ULWHd4PEAuyLtq"><b>our research paper about the entire robotics platform and simulation here!</b></a>
+							</p>
 						</div>
 					</div>
 
