--- a/writing.html
+++ b/writing.html
@@ -108,6 +108,17 @@
 										</div>
 									</a>
 								</article>
+								<article class="style5">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="writing_life_crayon.html">
+										<h2>Crayons</h2>
+										<div class="content">
+										
+										</div>
+									</a>
+								</article>
 								<article class="style8">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
